feat(P1-002): 验证查询接口
- 修复ApprovalStatisticsServiceTest构造函数参数与实际实现对齐
- 验证5个API端点(definition/instance/record/my/statistics)
- 139个测试全通过, mvn compile BUILD SUCCESS
- 验证日志查询SQL三表JOIN与is_deleted过滤
- 验证统计SQL聚合查询正确性

Task: P1-002-001-010-001-003
Module: P1-002 审批流程模块开发
Worker: W10